# MetaSigChain

./: .gitignore  Cargo.toml  README.md
.stellar/contract-ids/: soroban_token_contract.json
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  contract.js  index.css
src/: contract.rs  lib.rs  storage_types.rs  test.rs
test_snapshots/test/: burn_from_frozen_account_should_fail.1.json  test_multisig_mint.1.json  test_multisig_setup.1.json  test_multisig_transaction.1.json  test_multisig_transaction_expired.1.json  test_multisig_transaction_unauthorized.1.json  transfer_from_frozen_account_should_fail.1.json  unfreeze_account_then_transfer.1.json
