[package]
name = "soroban-token-contract"
version = "0.0.0"
edition = "2021"
publish = false

[features]
no-std = []

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.1" }
soroban-token-sdk = { version = "22.0.1" }
wee_alloc = "0.4.5"

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true